Name: sandbox-css
Version: 0.1.0
License: BSD3
License-File: LICENSE
Synopsis: CSS parser library
Description: A simple CSS parser.
Author: hnakamur@gmail.com
Maintainer: hnakamur@gmail.com
Cabal-Version: >= 1.2
Build-Type: Simple
Library
  Exposed-Modules: SandBox.Text.CSS
  Build-Depends: base >= 4.3
